# api/routes/index.js
@@ -1,5 +1,6 @@
 const express = require('express')
 const movies = require('./moviesRoutes')
+const categories = require('./categoriesRoutes')
 const swaggerUi = require('swagger-ui-express')
 const openApiDocumentation = require('../../docs/openapi.json')
 
@@ -9,6 +10,7 @@ module.exports = app => {
     }))
     app.use(express.json())
     app.use(movies)
+    app.use(categories)
     app.get("/",(req,res)=>res.status(200).json({message:'It works!'}))
     app.use('/api-docs',swaggerUi.serve,swaggerUi.setup(openApiDocumentation))
 }
